--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-starwars",
   "version": "1.0.0",
-  "email" : "sushilparajuli2010@gmail.com",
+  "email": "sushilparajuli2010@gmail.com",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.21.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -32,9 +35,12 @@
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
+    "fibers": "^5.0.3",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "start-server-and-test": "^1.15.2",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
